# Rhino-Pi-X1-ROS2HomeRobots

./: README.md
Code/: README.md
Code/X1-Pi/: README.md
Code/X1-Pi/ROS2_Packages/wheel_legged_-ros2/src/perception/: package.xml  setup.py
Code/X1-Pi/ROS2_Packages/wheel_legged_-ros2/src/perception/config/: params.yaml
Code/X1-Pi/ROS2_Packages/wheel_legged_-ros2/src/perception/launch/: person_follower.launch.py
Code/X1-Pi/ROS2_Packages/wheel_legged_-ros2/src/perception/perception/: person_follower.py
Code/X1-Pi/ROS2_Packages/wheel_legged_-ros2/src/wheel_foot_nav/: CMakeLists.txt  package.xml
Code/X1-Pi/ROS2_Packages/wheel_legged_-ros2/src/wheel_foot_nav/config/: nav2_params.yaml  slam_toolbox.yaml
Code/X1-Pi/ROS2_Packages/wheel_legged_-ros2/src/wheel_foot_nav/launch/: bringup.launch.py  nav.launch.py  slam.launch.py
Code/X1-Pi/ROS2_Packages/wheel_legged_-ros2/src/wheel_foot_nav/maps/: map.pgm
Code/X1-Pi/ROS2_Packages/wheel_legged_-ros2/src/wheel_foot_nav/rviz/: nav.rviz  slam.rviz
Code/X1-Pi/ROS2_Packages/wheel_legged_-ros2/src/wheel_foot_nav/scripts/: lifecycle_boot.py
Guide/: ~$物料清单-机械.xlsx  物料清单-机械.xlsx  物料清单-电子.xlsx
Guide/X1_Ubuntu/: 开机自启配置.md
Machine/: README.md
Machine/3D打印件/: LD06雷达转接架.STEP  README.md  上握把.STEP  前挡板.STEP  后挡板.STEP  显示屏支架.STEP  深度相机支架.STEP  轮毂打印件-内圈.STEP
Machine/SolidWorks/: 0.5mm垫片.SLDPRT  5x2实心轮胎.SLDPRT  6010-8安装尺寸图.stp  6215_轮毂电机3d模型20230511.SLDPRT  7寸显示屏.SLDPRT  M10 L20螺钉.SLDPRT  M10 L35螺钉.SLDPRT  M10法兰轴承.SLDPRT  M3-12铜柱.SLDPRT  M3-50铜柱.SLDPRT  M3-5铜柱.SLDPRT  M3长铝条6x6x30.SLDPRT  m3螺母.SLDPRT  上底板A.SLDPRT  前挡板.SLDPRT  后挡板.SLDPRT  大疆电池转接架.SLDPRT  左侧板A.SLDPRT  底板.SLDPRT  显示屏第二版支架.SLDPRT  杯头螺丝-m3_40.SLDPRT  沉头螺丝-m3_10.SLDPRT  深度相机.SLDPRT  电机-轮.SLDASM  第二版深度相机支架.SLDPRT  连杆1.SLDPRT  (+5 more)
(+269 files in other folders)
